--- a/index.html
+++ b/index.html
@@ -31,17 +31,18 @@
 
                 </ul>
             </address>
+            <button type="button" class="burger-btn"><svg class="burger-icon" width="24" height="24"><use href="./images/icons.svg#burger-icon"></use></svg></button>
         </div>
     </header>
     <main>    
-        <section class="top">
+        <section class="top hide">
             <div class="container">
                 <h1 class="topic">Effective Solutions for Your Business</h1>
                 <button type="button" class="button" onclick="backdrop()">Order Service</button>
             </div>
         </section>
         
-        <section class="center"> 
+        <section class="center hide"> 
             <div class="container">
                 <h2 class="visually-hidden">Our Benefits</h2>
                 <ul class="center-list">
@@ -81,7 +82,7 @@
                 </ul>
             </div>
         </section>
-        <section class="team">
+        <section class="team hide">
             <div class="container">
                 <h2 class="team-title">Our Team</h2>
                 <ul class="team-list">
@@ -141,7 +142,7 @@
             </div>
         </section>
 
-        <section class="portfolio">
+        <section class="portfolio hide">
             <div class="container">
                 <h2 class="portfolio-title-name">Our Portfolio</h2>
                 <ul class="portfolio-list">
@@ -216,7 +217,7 @@
             </div>
         </section>
     </main>
-    <footer class="footer">
+    <footer class="footer hide">
         <div class="container">
             <div class="logo-section">
                 <a href="./index.html" class="logo">Web<span class="logo-tex">Studio</span></a>
