--- a/index.html
+++ b/index.html
@@ -31,7 +31,15 @@
 
                 </ul>
             </address>
-            <button type="button" class="burger-btn"><svg class="burger-icon" width="24" height="24"><use href="./images/icons.svg#burger-icon"></use></svg></button>
+            <button type="button" class="burger-btn" onclick="mobile()"><svg class="burger-icon" width="24" height="24"><use href="./images/icons.svg#burger-icon"></use></svg></button>
+        </div>
+        <div class="mobile-menu">
+            <div class="container mobile-menu-container">
+                <button type="button" class="mobile-menu-close" onclick="closeMobile()">close</button>
+                <nav class="mobile-menu-nav">12</nav>
+                <address>321</address>
+                <ul>566</ul>
+            </div>
         </div>
     </header>
     <main>    
@@ -321,7 +329,15 @@
         let backdrop = document.querySelector(".backdrop");
         backdrop.classList.remove('is-open');
     }
+    function mobile(){
+        let backdrop = document.querySelector(".mobile-menu");
+        backdrop.classList.add('is-open');
+        }
+
+    function closeMobile(){
+        let backdrop = document.querySelector(".mobile-menu");
+        backdrop.classList.remove('is-open');
+    }
     </script>
 </body>
-
 </html>
