--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             </div>
         </section>
         
-        <section class="center hide"> 
+        <section class="center"> 
             <div class="container">
                 <h2 class="visually-hidden">Our Benefits</h2>
                 <ul class="center-list">
