--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                 </ul>
             </div>
         </section>
-        <section class="team hide">
+        <section class="team">
             <div class="container">
                 <h2 class="team-title">Our Team</h2>
                 <ul class="team-list">
@@ -177,7 +177,7 @@
             </div>
         </section>
 
-        <section class="portfolio hide">
+        <section class="portfolio">
             <div class="container">
                 <h2 class="portfolio-title-name">Our Portfolio</h2>
                 <ul class="portfolio-list">
