--- a/index.html
+++ b/index.html
@@ -117,6 +117,7 @@
                 </ul>
             </div>
         </section>
+<!-- photo --> 
         <section class="team">
             <div class="container">
                 <h2 class="team-title">Our Team</h2>
@@ -176,7 +177,7 @@
                 </ul>
             </div>
         </section>
-
+<!-- photo -->
         <section class="portfolio">
             <div class="container">
                 <h2 class="portfolio-title-name">Our Portfolio</h2>
@@ -252,6 +253,7 @@
             </div>
         </section>
     </main>
+
     <footer class="footer hide">
         <div class="container">
             <div class="logo-section">
