--- a/index.html
+++ b/index.html
@@ -123,7 +123,8 @@
                 <h2 class="team-title">Our Team</h2>
                 <ul class="team-list">
                     <li class="team-item">
-                        <img src="./images/img.jpg" alt="Mark Guerrero" width="264">
+
+                        <img srcset="./images/img-6.jpg 1x,./images/img@2x-6.jpg 2x" src="./images/img.jpg" alt="Mark Guerrero" width="264">
                         <div class="team-item-div">
                             <h3 class="team-title-name">Mark Guerrero</h3>
                             <p class="team-p">Product Designer</p> 
@@ -136,7 +137,7 @@
                         </div>
                     </li>
                     <li class="team-item">
-                        <img src="./images/img1.jpg" alt="Tom Ford" width="264">
+                        <img srcset="./images/img-7.jpg 1x,./images/img@2x-7.jpg 2x" src="./images/img1.jpg" alt="Tom Ford" width="264">
                         <div class="team-item-div">
                             <h3 class="team-title-name">Tom Ford</h3>
                             <p class="team-p">Frontend Developer</p>
@@ -149,7 +150,7 @@
                         </div>
                     </li>
                     <li class="team-item">
-                        <img src="./images/img2.jpg" alt="Camila Garcia" width="264">
+                        <img srcset="./images/img-8.jpg 1x,./images/img@2x-8.jpg 2x" src="./images/img2.jpg" alt="Camila Garcia" width="264">
                         <div class="team-item-div">
                             <h3 class="team-title-name">Camila Garcia</h3>
                             <p class="team-p">Marketing</p>
@@ -162,7 +163,7 @@
                         </div>
                     </li>
                     <li class="team-item">
-                        <img src="./images/img3.jpg" alt="Daniel Wilson" width="264">
+                        <img srcset="./images/img-9.jpg 1x,./images/img@2x-9.jpg 2x" src="./images/img3.jpg" alt="Daniel Wilson" width="264">
                         <div class="team-item-div">
                             <h3 class="team-title-name">Daniel Wilson</h3>
                             <p class="team-p">UI Designer</p>
@@ -185,7 +186,7 @@
 
                     <li class="portfolio-list-item">
                         <div class="overlay">
-                            <img src="./images/img4.jpg" alt="Banking app" width="360">
+                            <img srcset="./images/img-5.jpg 1x,./images/img@2x-5.jpg 2x" src="./images/img4.jpg" alt="Banking app" width="360">
                             <p class="overlay-p">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                         </div>
                         <div class="app-content">
@@ -196,7 +197,7 @@
 
                     <li class="portfolio-list-item">
                         <div class="overlay">
-                            <img src="./images/img5.jpg" alt="Cashless payment" width="360">
+                            <img srcset="./images/img-4.jpg 1x,./images/img@2x-4.jpg 2x" src="./images/img5.jpg" alt="Cashless payment" width="360">
                             <p class="overlay-p">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                         </div>
                         <div class="app-content">
@@ -207,7 +208,7 @@
 
                     <li class="portfolio-list-item">
                         <div class="overlay">
-                            <img src="./images/img6.jpg" alt="Meditation app" width="360">
+                            <img srcset="./images/img-3.jpg 1x,./images/img@2x-3.jpg 2x" src="./images/img6.jpg" alt="Meditation app" width="360">
                             <p class="overlay-p">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                         </div>
                         <div class="app-content">
@@ -218,7 +219,7 @@
 
                     <li class="portfolio-list-item">
                         <div class="overlay">
-                            <img src="./images/img7.jpg" alt="Taxi service" width="360">
+                            <img srcset="./images/img-2.jpg 1x,./images/img@2x-2.jpg 2x" src="./images/img7.jpg" alt="Taxi service" width="360">
                             <p class="overlay-p">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                         </div>
                         <div class="app-content">
@@ -229,7 +230,7 @@
 
                     <li class="portfolio-list-item">
                         <div class="overlay">
-                            <img src="./images/img8.jpg" alt="Screen illustartions" width="360">
+                            <img srcset="./images/img-1.jpg 1x,./images/img@2x-1.jpg 2x" src="./images/img8.jpg" alt="Screen illustartions" width="360">
                             <p class="overlay-p">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                         </div>
                         <div class="app-content">
@@ -240,7 +241,7 @@
 
                     <li class="portfolio-list-item">
                         <div class="overlay">
-                            <img src="./images/img9.jpg" alt="Online courses" width="360">
+                            <img srcset="./images/img0.jpg 1x,./images/img0@2x.jpg 2x" src="./images/img9.jpg" alt="Online courses" width="360">
                             <p class="overlay-p">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                         </div>
                         <div class="app-content">
@@ -254,7 +255,7 @@
         </section>
     </main>
 
-    <footer class="footer hide">
+    <footer class="footer">
         <div class="container">
             <div class="logo-section">
                 <a href="./index.html" class="logo">Web<span class="logo-tex">Studio</span></a>
@@ -338,8 +339,11 @@
                   <use href="./images/icons.svg#icon-send"></use>
                 </svg>
               </span>
-              I accept the terms and conditions of the
+              <span>
+                I accept the terms and conditions of the
               <a href="" class="modal-link">Privacy Policy</a>
+              </span>
+
             </label>
           </div>
         
